# haskell-serverless-example

./: .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  docker-compose.yml  main.cabal  main.hs  run-tmpl.js  run.js  stack.yaml  tags  test.js  vars.example.env
AWS/: Lambda.hs
Aws/: Lambda.hs
System/: Config.hs
example-src/: main.cabal  main.hs  tags
src/: Makefile  docker-compose.yml
src/app/: Dockerfile
src/app/src/: main.cabal
src/app/src/.stack-work/install/x86_64-linux/lts-5.17/7.10.3/doc/main-0.0.0.1/: LICENSE
src/app/src/.stack-work/install/x86_64-linux/lts-5.17/7.10.3/flag-cache/: main-0.0.0.1
src/infrastructure/: Dockerfile  build-lambda.sh  build.sh  main.cabal  main.hs  stack.yaml
src/infrastructure/Aws/: ApiGateway.hs  Lambda.hs
src/infrastructure/System/: Config.hs
