name:                main
version:             0.1.0.0
license-file:        LICENSE
author:              Brandon Stiles
maintainer:          brandon.stiles@me.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable main
  main-is:             main.hs
  build-depends:       base >=4.8 && <4.9,
                       amazonka
                     , amazonka-apigateway
                     , amazonka-lambda
                     , bytestring
                     , directory
                     , exceptions
                     , filepath
                     , lens
                     , mtl
                     , optparse-applicative
                     , process
                     , resourcet
                     , system-extra
                     , transformers
                     , text
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables, OverloadedStrings
  ghc-options:         -Wall -Werror -threaded
