name:                main
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Brandon Stiles
maintainer:          brandon.stiles@me.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable main
  main-is:             main.hs
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010
